@@ -1,5 +1,9 @@
 = HEAD
 
+* Do not override existing Content-Type header in json plugin (jeremyevans)
+
+* Add :content_type option to json plugin to override Content-Type header used (Kyrremann) (#58)
+
 * Add support for running with --enable-frozen-string-literal on ruby 2.3 (jeremyevans)
 
 * Add Streaming::Stream#write method so that IO.copy_stream will work (janko-m) (#56)
